# HR_Organization_Synapse

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  coverage.json  demo.ps1  docker-compose.yml  pyproject.toml  pytest.ini  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml  ruff.yml
api/: cache.py  db.py  deps.py  main.py  tenant.py
api/middleware/: tenant_middleware.py
api/models/: schemas.py
api/nl/: agent.py  tools.py
api/routers/: admin.py  alerts.py  billing.py  compliance.py  connectors.py  equity.py  graph.py  internal.py  knowledge.py  manager.py  onboarding.py  org_health.py  query.py  risk.py  scenarios.py  succession.py  teams.py  ws.py
api/ws/: broadcaster.py  manager.py
data/migrations/: 000_create_airflow_db.sql  001_app_schema.sql  002_add_connectivity_anomaly_alert_type.sql  003_churn_schema.sql  004_temporal_schema.sql  005_knowledge_risk.sql  006_succession.sql  007_org_health.sql  008_tenant_schema.sql  009_compliance.sql  010_manager_role.sql  011_digest_config.sql  012_departure_reports.sql  013_hris_enrichment.sql  014_reorg_scenarios.sql  015_transfer_plans.sql  016_dei_equity.sql  017_model_v2_v3_corrections.sql
data/synthetic/: edges.csv  employees.csv  generate_org_data.py
docs/: Business.md  DPIA_THREAT_MODEL.md  Decisions.md  MODEL.md  MODEL_CARD_CHURN.md  PITCH.md
etl/dags/: anomaly_detection_dag.py  churn_risk_dag.py  compliance_dag.py  departure_report_dag.py  equity_dag.py  graph_builder_dag.py  knowledge_risk_dag.py  neo4j_import_dag.py  org_health_dag.py  risk_scoring_dag.py  succession_dag.py  temporal_graph_dag.py  weekly_digest_dag.py
etl/tasks/: build_graph.py  compute_centrality.py  compute_equity.py  compute_onboarding.py  compute_peer_contagion.py  detect_entropy.py  generate_departure_report.py  generate_transfer_plans.py  neo4j_import.py  run_anomaly.py
etl/templates/: digest_email.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AlertToast.jsx  ChatPanel.jsx  CriticalNodePanel.jsx  DepartureReportModal.jsx  DigestConfigPanel.jsx  ErrorBoundary.jsx  Navbar.jsx  OrgGraph.jsx  OrgHealthCard.jsx  SiloAlert.jsx  TeamMemberCard.jsx  (+1 more)
graph/: builder.py  claude_client.py  compliance.py  knowledge_risk.py  metrics.py  neo4j_client.py  org_health.py  risk_scorer.py  scenario_simulator.py  silo_detector.py  succession.py  team_optimizer.py
graph/temporal/: model.py  scorer.py  sequence_builder.py  trainer.py
ingestion/: db.py  synthetic.py
ingestion/connectors/: confluence_connector.py  hris_connector.py  notion_connector.py
ingestion/consumers/: edge_consumer.py
ingestion/producers/: base_producer.py  calendar_producer.py  github_producer.py  jira_producer.py  jira_real_producer.py  registry.py  slack_producer.py  slack_real_producer.py  teams_producer.py  tenant_producer.py
ingestion/schemas/: collaboration_event.py
ml/anomaly/: isolation_forest.py
ml/features/: feature_extractor.py
ml/gnn/: feature_builder.py  model.py  scorer.py  trainer.py
monitoring/: prometheus.yml
scripts/: reset_db.py  seed_dev.py
tests/: conftest.py
tests/integration/: test_dags.py  test_ingestion_pipeline.py
tests/performance/: load_test.py
tests/unit/: test_api.py  test_churn_gnn.py  test_collaboration_event.py  test_compliance.py  test_connectors.py  test_core_coverage.py  test_e2e_pipeline.py  test_graph_metrics.py  test_isolation_forest.py  test_knowledge_risk.py  test_ml_features.py  test_model_corrections.py  test_neo4j_client.py  test_nl_query.py  test_org_health.py  test_performance.py  test_succession.py  test_synthetic_data.py  test_temporal_graph.py  test_tenant.py  test_websocket.py
tests/validation/: anomaly_detection_evaluator.py  churn_model_evaluator.py  ground_truth_validator.py  spof_impact_validator.py
(+15 files in other folders)
