[project]
name = "org-synapse"
version = "0.1.0"
description = "Organizational Synapse & Knowledge Risk — graph-based HR intelligence platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "kafka-python>=2.0.2",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0",
    "networkx>=3.0",
    "python-louvain>=0.16",
    "scikit-learn>=1.4.0",
    "pyod>=1.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
    "structlog>=24.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*", "graph*", "ml*", "api*", "etl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ingestion", "graph", "ml", "api"]
omit = ["tests/*", "data/*"]

# ─── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# E: pycodestyle errors   F: pyflakes   W: warnings
# B: bugbear (catches real bugs)   UP: pyupgrade
select = ["E", "F", "W", "B", "UP"]
ignore = [
    "E501",   # line-too-long — many docstrings and SQL strings legitimately exceed 120 chars
    "E402",   # module-import-not-at-top — sys.path.insert pattern used in runnable scripts
    "B008",   # function-call-in-default-argument — FastAPI Depends() pattern
    "B904",   # raise-without-from-inside-except — FastAPI pattern: hide original exc from HTTP clients
    "UP007",  # non-pep604-annotation — X | Y union syntax; kept for 3.9 forward-compat
    "UP038",  # non-pep604-isinstance — X | Y isinstance requires 3.10+; kept for 3.9 compat
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "S", "E702"]   # less strict in tests; allow semicolons in test setup

# ─── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = true
# Excluded files with annotation gaps that are tracked separately:
#   graph/org_health.py  — Anthropic SDK union-attr narrowing
#   graph/temporal/      — torch Tensor/float annotation gaps
exclude = ["graph/org_health\\.py", "graph/temporal/"]
